// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot on "DESKTOP" 1`] = `
<HeaderComponent>
  <div>
    <Desktop>
      <HeaderDesktop>
        <div
          className="header-bg text-light px-5"
        >
          <Container
            className="header-container"
            fluid={false}
          >
            <div
              className="header-container container"
            >
              <Row
                noGutters={false}
              >
                <div
                  className="row"
                >
                  <Col
                    className="pr-5 pl-0 mx-5 my-auto"
                  >
                    <div
                      className="pr-5 pl-0 mx-5 my-auto col"
                    >
                      <div>
                        <h3
                          className="font-weight-bold pb-2"
                        >
                          Learn new coding skills here
                        </h3>
                        <p
                          className="lead"
                        >
                          A place to help you build a strong foundation in data structures and
                           
                          algorithms and prepare for technical interviews, all in one platform.
                        </p>
                      </div>
                    </div>
                  </Col>
                  <Col
                    className="pl-5 pr-0 mx-5"
                  >
                    <div
                      className="pl-5 pr-0 mx-5 col"
                    >
                      <div
                        className="form-bg rounded"
                      >
                        <div
                          className="pt-4 pb-2 px-5"
                        >
                          <h4
                            className="font-weight-bold pb-3 mx-auto text-light"
                          >
                            Get Started for Free
                          </h4>
                          <SocialMediaButtons
                            cssClass="mx-auto fluid ui mb-4 py-3"
                          >
                            <div>
                              <div
                                className="lead"
                              >
                                <a
                                  className="mx-auto fluid ui mb-4 py-3 red google button"
                                  href="/api/auth/google"
                                >
                                  <i
                                    className="google icon"
                                  />
                                  Google Login
                                </a>
                              </div>
                              <div
                                className="lead"
                              >
                                <a
                                  className="mx-auto fluid ui mb-4 py-3 facebook button"
                                  href="/api/auth/facebook"
                                >
                                  <i
                                    className="facebook icon"
                                  />
                                  Facebook Login
                                </a>
                              </div>
                              <div
                                className="lead"
                              >
                                <a
                                  className="mx-auto fluid ui mb-4 py-3 black button"
                                  href="/api/auth/github"
                                >
                                  <i
                                    className="github icon"
                                  />
                                  Github Login
                                </a>
                              </div>
                            </div>
                          </SocialMediaButtons>
                        </div>
                      </div>
                    </div>
                  </Col>
                </div>
              </Row>
            </div>
          </Container>
        </div>
      </HeaderDesktop>
    </Desktop>
    <Tablet />
    <Mobile />
  </div>
</HeaderComponent>
`;

exports[`matches snapshot on "MOBILE" 1`] = `
<HeaderComponent>
  <div>
    <Desktop />
    <Tablet />
    <Mobile>
      <HeaderMobile>
        <div
          className="header-bg-mobile"
        >
          <div
            className="mx-5 header-container-mobile"
          >
            <Row
              className=""
              noGutters={false}
            >
              <div
                className="row"
              >
                <div
                  className="mx-auto text-light"
                >
                  <div
                    className="pb-2"
                  >
                    <h3
                      className="font-weight-bold pb-3 mx-auto text-light"
                    >
                      Start learning for free with NinjaPrep
                    </h3>
                    <div>
                      <SocialMediaButtons
                        cssClass="mx-auto fluid ui mb-4 py-3 "
                      >
                        <div>
                          <div
                            className="lead"
                          >
                            <a
                              className="mx-auto fluid ui mb-4 py-3  red google button"
                              href="/api/auth/google"
                            >
                              <i
                                className="google icon"
                              />
                              Google Login
                            </a>
                          </div>
                          <div
                            className="lead"
                          >
                            <a
                              className="mx-auto fluid ui mb-4 py-3  facebook button"
                              href="/api/auth/facebook"
                            >
                              <i
                                className="facebook icon"
                              />
                              Facebook Login
                            </a>
                          </div>
                          <div
                            className="lead"
                          >
                            <a
                              className="mx-auto fluid ui mb-4 py-3  black button"
                              href="/api/auth/github"
                            >
                              <i
                                className="github icon"
                              />
                              Github Login
                            </a>
                          </div>
                        </div>
                      </SocialMediaButtons>
                    </div>
                  </div>
                </div>
              </div>
            </Row>
          </div>
        </div>
      </HeaderMobile>
    </Mobile>
  </div>
</HeaderComponent>
`;

exports[`matches snapshot on "TABLET" 1`] = `
<HeaderComponent>
  <div>
    <Desktop />
    <Tablet>
      <HeaderTablet>
        <div
          className="header-bg text-light"
        >
          <Container
            className="header-container px-5"
            fluid={false}
          >
            <div
              className="header-container px-5 container"
            >
              <Row
                noGutters={false}
              >
                <div
                  className="row"
                >
                  <Col
                    className="my-auto pr-4 pl-0"
                  >
                    <div
                      className="my-auto pr-4 pl-0 col"
                    >
                      <div>
                        <h3
                          className="font-weight-bold pb-2"
                        >
                          Learn new coding skills here
                        </h3>
                        <p
                          className="lead"
                        >
                          A place to help you build a strong foundation in data structures and
                           
                          algorithms and prepare for technical interviews, all in one platform.
                        </p>
                      </div>
                    </div>
                  </Col>
                  <Col
                    className="pl-3 pr-0"
                  >
                    <div
                      className="pl-3 pr-0 col"
                    >
                      <div
                        className="form-bg rounded"
                      >
                        <div
                          className="pt-4 pb-2 px-5"
                        >
                          <h4
                            className="font-weight-bold pb-3 mx-auto text-light"
                          >
                            Get Started for Free
                          </h4>
                          <div>
                            <SocialMediaButtons
                              cssClass="mx-auto fluid ui mb-4 py-3"
                            >
                              <div>
                                <div
                                  className="lead"
                                >
                                  <a
                                    className="mx-auto fluid ui mb-4 py-3 red google button"
                                    href="/api/auth/google"
                                  >
                                    <i
                                      className="google icon"
                                    />
                                    Google Login
                                  </a>
                                </div>
                                <div
                                  className="lead"
                                >
                                  <a
                                    className="mx-auto fluid ui mb-4 py-3 facebook button"
                                    href="/api/auth/facebook"
                                  >
                                    <i
                                      className="facebook icon"
                                    />
                                    Facebook Login
                                  </a>
                                </div>
                                <div
                                  className="lead"
                                >
                                  <a
                                    className="mx-auto fluid ui mb-4 py-3 black button"
                                    href="/api/auth/github"
                                  >
                                    <i
                                      className="github icon"
                                    />
                                    Github Login
                                  </a>
                                </div>
                              </div>
                            </SocialMediaButtons>
                          </div>
                        </div>
                      </div>
                    </div>
                  </Col>
                </div>
              </Row>
            </div>
          </Container>
        </div>
      </HeaderTablet>
    </Tablet>
    <Mobile>
      <HeaderMobile>
        <div
          className="header-bg-mobile"
        >
          <div
            className="mx-5 header-container-mobile"
          >
            <Row
              className=""
              noGutters={false}
            >
              <div
                className="row"
              >
                <div
                  className="mx-auto text-light"
                >
                  <div
                    className="pb-2"
                  >
                    <h3
                      className="font-weight-bold pb-3 mx-auto text-light"
                    >
                      Start learning for free with NinjaPrep
                    </h3>
                    <div>
                      <SocialMediaButtons
                        cssClass="mx-auto fluid ui mb-4 py-3 "
                      >
                        <div>
                          <div
                            className="lead"
                          >
                            <a
                              className="mx-auto fluid ui mb-4 py-3  red google button"
                              href="/api/auth/google"
                            >
                              <i
                                className="google icon"
                              />
                              Google Login
                            </a>
                          </div>
                          <div
                            className="lead"
                          >
                            <a
                              className="mx-auto fluid ui mb-4 py-3  facebook button"
                              href="/api/auth/facebook"
                            >
                              <i
                                className="facebook icon"
                              />
                              Facebook Login
                            </a>
                          </div>
                          <div
                            className="lead"
                          >
                            <a
                              className="mx-auto fluid ui mb-4 py-3  black button"
                              href="/api/auth/github"
                            >
                              <i
                                className="github icon"
                              />
                              Github Login
                            </a>
                          </div>
                        </div>
                      </SocialMediaButtons>
                    </div>
                  </div>
                </div>
              </div>
            </Row>
          </div>
        </div>
      </HeaderMobile>
    </Mobile>
  </div>
</HeaderComponent>
`;
